--- a/about_me/list_of_publications.qmd
+++ b/about_me/list_of_publications.qmd
@@ -9,6 +9,22 @@ editor: visual
 
 ### Peer reviewed publications and chapters
 
+-   Herbert, A. V., Haberle, S. G., **Flantua, S. G. A.**, Mottl, O., Blois, J. L., Williams, J. W., George, A., and Hope, G. S., **2024**. The Indo--Pacific Pollen Database -- a Neotoma constituent database, ***Climate of the Past*** 20, 2473--2485. [L](https://doi.org/10.5194/cp-20-2473-2024,%202024)[ink](https://cp.copernicus.org/articles/20/2473/2024/)
+
+-   Schafstall, N.B., Benito, X., Brugger, S.O., Davies, A.L., Ellis, E., Pla-Rabes, S., Bonk, A., Bunting, J., Chambers, F.M., **Flantua, S.G.A.**, Fletcher, T.L., Greiser, C., Hernandez, A., Keenan, B., Koren, G., Marcisz, K., Montoya, E., Quesada-Román, A., Ratnayake, A.S., Sabatier, P., Smol, J.P., Suárez-Mozo, Y.S., **2024**. Ten simple rules to bridge ecology and palaeoecology by publishing outside palaeo-ecological journals. ***PLOS ONE***. [Link](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1012487).
+
+-   Hooghiemstra, H. Berrio J-C, Torres, V., Bogotá-A, R.B:, Groot, M., Hoorn, C., **Flantua, S.G.A.** **2024**. Pollen records of Northern South America: Quaternary history. ***Encyclopedia of Quaternary Science***. Third edition, Elsevier, 2024.
+
+-   Pacheco-Riaño, L.C., Rumpf, S., Maliniemi, T., **Flantua, S.G.A.\***, Grytnes, J.-A.\*, **2024**. Reliability of presence-only data for assessing plant community responses to climate warming. ***Ecography***, e07213. <https://doi.org/10.1111/ecog.07213>. [Link](https://nsojournals.onlinelibrary.wiley.com/doi/10.1111/ecog.07213). *(\* senior authors)*
+
+-   Sayedi, S.S., Abbott, B.W., Vannière, B., Leys, B., Colombaroli, D., Romera, G.G., Słowiński, M., Aleman, J.C., Blarquez, O., Feurdean, A., Brown, K., Aakala, T., Alenius, T., Allen, K., Andric, M., Bergeron, Y., Biagioni, S., Bradshaw, R., Bremond, L., Brisset, E., Brooks, J., Brugger, S.O., Brussel, T., Cadd, H., Cagliero, E., Carcaillet, C., Carter, V., Catry, F.X., Champreux, A., Chaste, E., Chavardès, R.D., Chipman, M., Conedera, M., Connor, S., Constantine, M., Courtney Mustaphi, C., Dabengwa, A.N., Daniels, W., De Boer, E., Dietze, E., Estrany, J., Fernandes, P., Finsinger, W., **Flantua, S.G.A.**, Fox-Hughes, P., Gaboriau, D.M., M.Gayo, E., Girardin, Martin.P., Glenn, J., Glückler, R., González-Arango, C., Groves, M., Hamilton, D.S., Hamilton, R.J., Hantson, S., Hapsari, K.A., Hardiman, M., Hawthorne, D., Hoffman, K., Inoue, J., Karp, A.T., Krebs, P., Kulkarni, C., Kuosmanen, N., Lacourse, T., Ledru, M.-P., Lestienne, M., Long, C., López-Sáez, J.A., Loughlin, N., Niklasson, M., Madrigal, J., Maezumi, S.Y., Marcisz, K., Mariani, M., McWethy, D., Meyer, G., Molinari, C., Montoya, E., Mooney, S., Morales-Molino, C., Morris, J., Moss, P., Oliveras, I., Pereira, J.M., Pezzatti, G.B., Pickarski, N., Pini, R., Rehn, E., Remy, C.C., Revelles, J., Rius, D., Robin, V., Ruan, Y., Rudaya, N., Russell-Smith, J., Seppä, H., Shumilovskikh, L., T.Sommers, W., Tavşanoğlu, Ç., Umbanhowar, C., Urquiaga, E., Urrego, D., Vachula, R.S., Wallenius, T., You, C., Daniau, A.-L., **2024**. Assessing changes in global fire regimes. ***Fire Ecology** 20*, 18. [Link](https://doi.org/10.1186/s42408-023-00237-9)
+
+-   **Flantua, S.G.A.**, Hooghiemstra, H., **2023**. Anthropogenic pollen indicators: Global food plants and Latin American human indicators in the pollen record. ***Nature Scientific Data*** 10, 721. [Link](https://www.nature.com/articles/s41597-023-02613-1).
+
+-   Gallou, A., Jump, A.S., Lynn, J.S., Field, R., Irl, S.D.H., Steinbauer, M.J., Beierkuhnlein, C., Chen, J.-C., Chou, C.-H., Hemp, A., Kidane, Y., König, C., Kreft, H., Naqinezhad, A., Nowak, A., Nuppenau, J.-N., Trigas, P., Price, J.P., Roland, C.A., Schweiger, A.H., Weigelt, P., **Flantua, S.G.A.\***, Grytnes, J.-A.\*, **2023**. Diurnal temperature range as a key predictor of plants\' elevation ranges globally*. **Nature Communications***14, 7890. [Link](https://www.nature.com/articles/s41467-023-43477-8)*.* (\**senior authors*)
+
+-   Birks, H.J.B., Bhatta, K.P., Felde, V.A., **Flantua, S.G.A.**, Mottl, O., Haberle, S.G., Herbert, A., Hooghiemstra, H., Birks, H.H., Grytnes, J.-A., Seddon, A.W.R., **2023**. Approaches to pollen taxonomic harmonisation in Quaternary palynology. ***Review of Palaeobotany and Palynology*** 319, 104989. https://doi.org/10.1016/j.revpalbo.2023.104989. [Link](https://doi.org/10.1016/j.revpalbo.2023.104989).
+
 -   Van der Sande, M., Bush, M., Akesson, C.M., Berrio, J-C, Correa-Metrío, A., **Flantua, S.G.A.**, Hooghiemstra, H., Maezumi, S.Y., McMichael, C.N.H., Montoya, E., Mosblech, N.A.S., Nascimento, M. de Novaes, Peña-Claros, M., Poorter, L., Raczka, M.F., Gosling, W.D. (2023). Warming, drought and disturbances lead to shifts in functional composition; a millennial-scale analysis for Amazonian and Andean sites. *Global Change Biology*. [Link](https://doi.org/10.1111/gcb.16818){.uri}
 
 -   Pacheco-Riaño, C., **Flantua, S.G.A.\***, Grytnes, J-A.\* 2023. Can Plants "Move" Fast Enough to Escape Climate Change? *Frontiers for Young Minds.* (\**senior authors*) [Link](https://kids.frontiersin.org/articles/10.3389/frym.2023.947230){.uri}
