--- a/about_me/cv.qmd
+++ b/about_me/cv.qmd
@@ -20,7 +20,7 @@ about:
 ---
 
 ::: {#hero-heading}
-My main research interest is to understand what determines biodiversity in mountain regions, by studying the impact of climate dynamics at various time scales (past, present, future). I am particularly interested in the way how historical environmental factors (climate and geology) and humans influenced contemporary biodiversity patterns. I use a biogeographical and palaeoecological approach, taking advantage of recent developments in palaeoecological data availability (e.g. Neotoma) and landscape modelling (GIS). Most of my work has dealt with the tropics where I also have organized and participated in numerous field expeditions of the Northern and Central Andes, and savanna lowlands. I also supervise students and lecture in courses, organize scientific events, and take responsibility in committees. In addition, I am passionate about communicating my research to a broader audience through the use of video and talks about sustainability.
+My main research interest is to understand what determines biodiversity in mountain regions, by studying the impact of climate dynamics at various time scales (past, present, future). I am particularly interested in the way how historical environmental factors (climate and geology) and humans influenced contemporary biodiversity patterns. I use a biogeographical and palaeoecological approach, taking advantage of recent developments in palaeoecological data availability (e.g. Neotoma) and landscape modelling (GIS). Most of my work has dealt with the tropics where I also have organized and participated in numerous field expeditions of the Europe, USA, and Latin America (especially Northern and Central Andes, and Amazonian lowlands). I also supervise students and lecture in courses, organize scientific events, and take responsibility in committees. In addition, I am passionate about communicating my research to a broader audience through the use of video and talks about sustainability.
 
 ------------------------------------------------------------------------
 
